Fixes #15536: Fix clipping of dropdown menus inside responsive tables

--- a/netbox/project-static/styles/overrides/_bootstrap.scss
+++ b/netbox/project-static/styles/overrides/_bootstrap.scss
@@ -1,4 +1,11 @@
 // Disable smooth scrolling for intra-page links
 html {
-    scroll-behavior: auto !important;
+  scroll-behavior: auto !important;
+}
+
+// Prevent dropdown menus from being clipped inside responsive tables
+.table-responsive {
+  .dropdown, .btn-group, .btn-group-vertical {
+    position: static;
+  }
 }
